<resources>
    <string name="app_name">Glasses</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_refresh_usb">Refresh usb</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="text_view_age">Age</string>
    <string name="seek_bar_age">Age2 - not used</string>
    <string name="text_view_age_top">Old</string>
    <string name="text_view_age_bottom">Young</string>

    <string name="text_view_acidity">Acidity</string>
    <string name="seek_bar_acidity">Acidy2 - not used</string>
    <string name="text_view_acidity_top">Sweet</string>
    <string name="text_view_acidity_bottom">Acid</string>

    <string name="sliders_text_title">The wine color change with stuffs and so...</string>
    <string name="sliders_text_desc">swipe sliders to see colors</string>

    <string name="title_activity_my_shortcuts">MyShortcuts</string>
    <string name="button_en">english</string>
    <string name="button_fr">french</string>


</resources>
