<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--
        <EditText android:id="@+id/edit_message"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />
        -->
        <!-- android:layout_weight="1" -->

        <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="sendMessage"
            />
        -->

        <!--
        android:paddingBottom="100dp"
        -->

        <TextView android:id="@+id/text_view_age"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_view_age"
            android:layout_gravity="center"
            android:textSize="40dp"
            />

        <TextView android:id="@+id/text_view_age_top"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_view_age_top"
            android:layout_gravity="center"

            />

        <SeekBar android:id="@+id/seek_bar_age"
            android:layout_height="wrap_content"
            android:layout_width="600dp"
            android:rotation="270"
            android:layout_gravity="center"
            android:text="@string/seek_bar_age"
            android:onClick="seek_age_changed"

            />

        <TextView android:id="@+id/text_view_age_bottom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_view_age_bottom"
            android:layout_gravity="center"

            />

        <TextView android:id="@+id/text_view_progress_age"
            android:layout_height="20dp"
            android:layout_width="40dp"
            android:layout_gravity="center"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView android:id="@+id/text_view_acidity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_view_acidity"
            android:layout_gravity="center"
            android:textSize="40dp"
            />

    </LinearLayout>

</LinearLayout>